@@ -2,8 +2,11 @@ PostGIS 1.1.4CVS
 
 	- Fixed support for PostgreSQL 8.2
 	- JDBC:
-		- reworked JTS support to reflect new upstream JTS developers' attitude to 
-		  SRID handling. This removes build depend on GNU trove.
+	   - reworked JTS support to reflect new upstream
+	     JTS developers' attitude to SRID handling.
+	     This removes build depend on GNU trove.
+	- Fixed bug in collect() function discarding SRID of
+	  input
 
 PostGIS 1.1.3
 2006/06/30
